--- a/.github/workflows/dependency-jobs.yml
+++ b/.github/workflows/dependency-jobs.yml
@@ -12,7 +12,7 @@ jobs:
         run: |
           echo "This is the first job running on push to main or manual trigger."
           echo "Setting up environment..."
-          apt-get update && apt-get install -y python3 python3-pip
+          sudo apt-get update && apt-get install -y python3 python3-pip
 
   test:
     needs: build
