Fix typo in output command for environment setup

--- a/.github/workflows/dependency-jobs.yml
+++ b/.github/workflows/dependency-jobs.yml
@@ -21,7 +21,7 @@ jobs:
       - name: running second job
     
         run: |
-          Write-Outpt "Setting up environment..."
+          Write-Output "Setting up environment..."
           choco install python
 
   deploy:
